--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,35 +6,33 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
-
-// h1 美味しいものを食べよう
-.account {
-  padding: 20px;
-  color: black;
-  font-size: 70px;
-}
-  
-// 新規登録、アカウント　クラス
-.account-Verification {
-  margin-top: 10%;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 }
  
-  // 新規登録ボタン
-.signin-button {
-  font-family: "Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体";
-  font-size: 40px;
-}
-  
-  // アカウント確認のボタン
-.login-button {
-  font-size: 40px;
+.top-hero-wrapper .main .sign-up-button {
+  border-color: skyblue;
+  background-color: skyblue;
+  border-width: 12px;
+  margin-right: 30px;
 }
 
+.top-hero-wrapper .main .sign-up-button .signup-button {
+  color: white;
+}
 
+.top-hero-wrapper .main .sign-in-button {
+  border-color: skyblue;
+  background-color: skyblue;
+  border-width: 12px;
+}
+.top-hero-wrapper .main .sign-in-button .signin-button {
+   color: white;
+}
 
-.hoge {
+.new-account {
   background-image: url('account.jpg');
   width: 100vw;
   height: 100vh;
@@ -42,32 +40,13 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-}
-// h1 アカウント登録
-.new-account {
-  margin: 40px;
-  text-align: center;
-  font-family: "Hiragino Sans","ヒラギノ角ゴシック";
-  font-size: 5em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
-// label form class
-.accoun-label-form {
-  margin: 10px;
-  
-}
-
-.form-group {
-  margin: 4% 0px 0px 0px;
-  text-align: center;
-  font-size: 2em;
-  
-  .label-group {
-    margin: 10px;
-    margin-right: 40px;
-  }
-}
-
-.registration {
-  font-size: 2em;
+.acount .new-account .logo-wrapper {
+  font-size: 50px;
 }
