--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,26 +1,30 @@
-<div class="hoge">
-  <div>
-    <h1 class="new-account">アカウント登録</h1>
-    <%= form_with model: @users do |user| %>
-    <div class="form-group">
-      <%= user.label :name, class: "label-group" %>
-      <%= user.text_field :name %>
+<body class="account">
+  <div class="new-account">
+    <header>
+      <h1 class="logo-wrapper">New Account.</h1>
+    </header>
+    <div>
+      <%= form_with model: @users do |user| %>
+        <div class="form-group">
+          <%= user.label :name, class: "label-group" %>
+          <%= user.text_field :name %>
+        </div>
+        <div class="form-group">
+          <%= user.label :email, class: "label-group" %> 
+          <%= user.email_field :email %>
+        </div>
+        <div class="form-group">
+          <%= user.label :password, class: "label-group" %>
+          <%= user.password_field :password %>
+        </div>
+        <div class="form-group">
+          <%= user.label :passwordconfirmation, class: "label-group" %> 
+          <%= user.password_field :passwordconfirmation %>
+        </div>
+        <div class="form-group">
+          <%= user.submit "登録", class: "btn btn-success registration" %>
+        </div>
+      <% end %>
     </div>
-    <div class="form-group">
-      <%= user.label :email, class: "label-group" %> 
-      <%= user.email_field :email %>
-    </div>
-    <div class="form-group">
-      <%= user.label :password, class: "label-group" %>
-      <%= user.password_field :password %>
-    </div>
-    <div class="form-group">
-      <%= user.label :passwordconfirmation, class: "label-group" %> 
-      <%= user.password_field :passwordconfirmation %>
-    </div>
-    <div class="form-group">
-      <%= user.submit "登録", class: "btn btn-success registration" %>
-    </div>
-    <% end %>
-  </div>
-</div>
+  </div>  
+</body>
