--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
         <%= link_to "Sign Up", new_user_path, class: "signup-button" %>
       </button>
       <button class="sign-in-button">
-        <%= link_to "Sign In", accounts_path, class: "signin-button" %>
+        <%= link_to "Sign In", login_path, class: "signin-button" %>
       </button>
     </div>
   </div>
