--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,8 +18,8 @@
           <%= user.password_field :password %>
         </div>
         <div class="form-group">
-          <%= user.label :passwordconfirmation, class: "label-group" %> 
-          <%= user.password_field :passwordconfirmation %>
+          <%= user.label :password_confirmation, class: "label-group" %> 
+          <%= user.password_field :password_confirmation %>
         </div>
         <div class="form-group">
           <%= user.submit "登録", class: "btn btn-success registration" %>
