管理者画面の作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,6 @@
 @import "bootstrap";
 @import "users.scss";
 @import "accounts.scss";
+@import "cuisines.scss";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
