マスターの最新化

--- a/app/assets/stylesheets/cuisines.scss
+++ b/app/assets/stylesheets/cuisines.scss
@@ -20,14 +20,17 @@
     margin-bottom: 80px;
 }
 .form-item-field {
-    width: 60%;
+    width: 45%;
+    height: 40px;
     margin: auto;
     background-color: blanchedalmond;
-
+}
+.hoge1 {
+    height: 27px;
+    width: 60%;
 }
 .product-group div label {
     font-size: 20px;
-    color: white;
     color: orange;
     background-color: black;
     width: 40px;
@@ -38,8 +41,6 @@
     font-size: 20px;
  }
 .product-group .product-registration {
-    position: absolute;
-    bottom: 100px;
     height: 50px;
     width: 180px;
     font-size: 34px;
