--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -69,8 +69,6 @@
 .account .new-account .logo-wrapper {
   font-size: 50px;
 }
-.account .new-account .center-userregistation {
-}
 .account .new-account .center-userregistation .useraccount-registation-group {
   display: flex;
 }
@@ -100,6 +98,7 @@
   border-radius: 24px;
   background-color: #0F0;
   width: 80px;
-  height: 40px;
+  height: 50px;
+  font-size: 20px;
 }
 
