--- a/app/views/cuisines/new.html.haml
+++ b/app/views/cuisines/new.html.haml
@@ -10,7 +10,7 @@
           = f.text_field :price, class:"form-item-field"
         %div
           = f.label :画像, class:"form-item-label"
-          = f.file_field :photo, class:"form-item-field"
+          = f.file_field :photo, class:"form-item-field hoge1"
         %div
           = f.label :詳細, class:"form-item-label"
           = f.text_area :text, class: "detail-form form-item-field"
